[package]
name = "tokenate"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords= ["token","tokenize","inner","parse"]
readme = "readme.md"
description = "A tool to do some grunt work of writing a tokenizer"
repository= "https://github.com/storyfeet/tokenate"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
